--- a/style.css
+++ b/style.css
@@ -1,5 +1,45 @@
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+  text-align: center;
+  }
+  header {
+    background-color: #f2f2f2;
+  }
+header-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
+image-container {
+  text-align: center;
+}
+image-container img {
+  display: block;
+  margin: 0 auto;
+}
+image-caption {
+  font-size: 14px;
+  text-align: center;
+}
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+nav a {
+  display: inline-block;
+  padding: 10px;
+  background-color: grey;
+}
+#featured-property p {
+  width: 800px;
+  margin: 20px auto;
+  text-align: center;
+}
+footer {
+  background-color: #f2f2f2;
+  display: flex;
+}
+footer-item {
+  flex: 1;
+  text-align: center;
 }
